syntax = "proto3";
package naniue;
// option go_package = "../naniue.proto;naniue";


import "google/protobuf/timestamp.proto";

message Empty{}

service Wpp {
  rpc Login(Empty) returns (LoginRes);
  rpc GetChats(Empty) returns (Chats);
  rpc GetChat(GetById) returns (Chat);
  rpc GetContacts(Empty) returns (Contacts);
  rpc GetContact(GetById) returns (Contact);

  rpc SendMessage(SendMessageReq) returns (Empty);
  rpc SubscribeMessages(Empty) returns (stream Message);
}

message Chats {
  repeated Chat chats=1;
}

message GetById {
  string id = 1;
}

enum AuthMethod {
  QR_CODE=0;
}

message AuthCode {
  AuthMethod type = 1;
  string value = 2;
}

message Error {
  string message=1;
}

message LoginRes {
  oneof result {
    AuthCode code = 1;
    Error error = 2;
    Empty alive = 3;
  }
}
message Contacts {
  repeated Contact contacts=1;
}

message Contact {
  string name = 1;
  string picture_url=2;
  string jid = 3;
}

message Chat {
  string name = 1;
  uint32 unread_count = 2;
  google.protobuf.Timestamp last_msg_timestamp = 3;
  bool archived = 4;
  uint32 pinned = 5;
  string contact_jid = 6;
  string picture_url=7;
}

message SendMessageReq {
  string to_jid=1;
  string message=2;
}

message Message {
  string id = 1;
  string sender_jid=2;
  string chat_id=3;
  string message=4;
  bool is_forwarded=5;
  bool from_me=6;
  google.protobuf.Timestamp Timestamp = 7;
}
